hive/honeys/prometheus/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: grafana-auth
  namespace: prometheus-k8s
spec:
  forwardAuth:
    address: http://oauth2-proxy.oauth2-proxy-k8s.svc.cluster.local
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-main
  namespace: prometheus-k8s
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dash.savew.dev`)
      priority: 10
      middlewares:
        - name: grafana-auth
          namespace: prometheus-k8s
      services:
        - kind: Service
          name: prometheus-grafana
          namespace: prometheus-k8s
          passHostHeader: true
          port: 80
          scheme: http
  tls:
    domains:
      - main: dash.savew.dev
    secretName: wildcard-savew.dev-tls
